--- a/start.html
+++ b/start.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="Img/road-gc599b74a6_640.jpg" alt="">
-    <h1>this is bithi</h1>
+    <h1>this is bithi g</h1>
 </body>
 
 </html>
